change start page to max page

--- a/Supperxin.Web.Webcrawler/Configurations/appsettings.cyzone.json
+++ b/Supperxin.Web.Webcrawler/Configurations/appsettings.cyzone.json
@@ -61,7 +61,7 @@
             "PageIteration": {
                 "IterationName": "PiUnixTimestamp",
                 "PageFormat": "http://www.cyzone.cn/content/index/init?tpl=list_kuaixun_ajax&inputtime={0}&page=1",
-                "StartPage": 100
+                "MaxPage": 100
             }
         }
     ]
