final version for crawl zhyq

--- a/Supperxin.Web.Webcrawler/Configurations/appsettings.zhyq.json
+++ b/Supperxin.Web.Webcrawler/Configurations/appsettings.zhyq.json
@@ -1,17 +1,24 @@
 {
     "CrawlJobs": [
         {
-            "Enabled": true,
+            "Enabled": false,
             "JobName": "住房和城乡建设部规章",
             "StartUrls": [
                 "http://www.mohurd.gov.cn/fgjs/jsbgz/index.html"
             ],
-            "IsListPageCheckRegex": "http://www.mohurd.gov.cn/fgjs/jsbgz/index.*\\.html",
-            "ListPageFormat": "http://www.mohurd.gov.cn/fgjs/jsbgz/index_{0}.html",
-            "ListPageStart": 222,
+            "PageIteration": {
+                "IterationName": "PiInteger",
+                "PageFormat": "http://www.mohurd.gov.cn/fgjs/jsbgz/index_{0}.html",
+                "MaxPage": 10,
+                "StartPage": 2
+            },
             "ResultItemXPath": "/html/body/table/tbody/tr[2]/td/table/tbody/tr/td[2]/table[2]/tbody/tr[1]/td/table/tr",
-            "IsItemPageCheckRegex": "http://www.mohurd.gov.cn/fgjs/jsbgz/.*\\.html",
+            "IsItemPageCheckRegex": "\\d{6}/.*\\.html",
             "SaveResultsTo": "results/jsbgz/",
+            "SaveTo": {
+                "Type": "HttpPipline",
+                "ProcessUrl": "http://"
+            },
             "Metas": [
                 {
                     "FieldName": "Url",
@@ -20,7 +27,12 @@
                     "CheckCache": true
                 },
                 {
-                    "FieldName": "PublishDate",
+                    "FieldName": "originalUrl",
+                    "XPath": "/td[2]/a",
+                    "Attribute": "href"
+                },
+                {
+                    "FieldName": "originalPublishDate",
                     "XPath": "/td[3]",
                     "Regex": "\\d{4}\\.\\d{2}\\.\\d{2}",
                     "CheckCache": true
@@ -28,16 +40,26 @@
             ],
             "Fields": [
                 {
-                    "FieldName": "Title",
+                    "FieldName": "originalTitle",
                     "XPath": "/html/body/table/tbody/tr[2]/td/table[2]/tbody[2]/tr[2]/td/table/tbody/tr[1]/td"
                 },
                 {
-                    "FieldName": "Content",
+                    "FieldName": "originalContent",
                     "XPath": "/html/body/table/tbody/tr[2]/td/table[2]/tbody[2]/tr[2]/td/table/tbody/tr[5]/td/div/div"
                 },
                 {
-                    "FieldName": "Source",
+                    "FieldName": "originalSource",
                     "FieldValue": "住房和城乡建设部规章"
+                }
+            ],
+            "Operations": [
+                {
+                    "FieldName": "originalPublishDate",
+                    "OperationName": "OpReplace",
+                    "Parameters": [
+                        ".",
+                        "-"
+                    ]
                 }
             ]
         },
@@ -47,12 +69,19 @@
             "StartUrls": [
                 "http://www.ahfzb.gov.cn/content/channel/5ab9ea2ecfd9f37805000000/page-1/"
             ],
-            "IsListPageCheckRegex": "http://www.ahfzb.gov.cn/content/channel/5ab9ea2ecfd9f37805000000/page-[0-9]+/",
-            "ListPageFormat": "http://www.ahfzb.gov.cn/content/channel/5ab9ea2ecfd9f37805000000/page-{0}/",
-            "ListPageStart": 222,
+            "PageIteration": {
+                "IterationName": "PiInteger",
+                "PageFormat": "http://www.ahfzb.gov.cn/content/channel/5ab9ea2ecfd9f37805000000/page-{0}/",
+                "MaxPage": 10,
+                "StartPage": 2
+            },
             "ResultItemXPath": "//*[@id=\"container\"]/div[2]/table/tr/td[3]/ul/li",
             "IsItemPageCheckRegex": "/content/detail/.*\\.html",
             "SaveResultsTo": "results/ahfzb/",
+            "SaveTo": {
+                "Type": "HttpPipline",
+                "ProcessUrl": "http://"
+            },
             "Metas": [
                 {
                     "FieldName": "Url",
@@ -61,38 +90,50 @@
                     "CheckCache": true
                 },
                 {
-                    "FieldName": "PublishDate",
+                    "FieldName": "originalUrl",
+                    "XPath": "/a",
+                    "Attribute": "href"
+                },
+                {
+                    "FieldName": "originalPublishDate",
                     "XPath": "/span",
                     "CheckCache": true
                 }
             ],
             "Fields": [
                 {
-                    "FieldName": "Title",
+                    "FieldName": "originalTitle",
                     "XPath": "//*[@id=\"container\"]/div[2]/div[2]/div[1]"
                 },
                 {
-                    "FieldName": "Content",
+                    "FieldName": "originalContent",
                     "XPath": "//*[@id=\"zoom\"]"
                 },
                 {
-                    "FieldName": "Source",
+                    "FieldName": "originalSource",
                     "FieldValue": "安徽省人民政府法制办公室"
                 }
             ]
         },
         {
-            "Enabled": false,
+            "Enabled": true,
             "JobName": "阜阳市人民政府政务服务中心",
             "StartUrls": [
                 "http://fwzx.fy.gov.cn/content/channel/59a7d2b77f8b9aed58e15d1f/page-1/"
             ],
-            "IsListPageCheckRegex": "http://fwzx.fy.gov.cn/content/channel/59a7d2b77f8b9aed58e15d1f/page-[0-9]+/",
-            "ListPageFormat": "http://fwzx.fy.gov.cn/content/channel/59a7d2b77f8b9aed58e15d1f/page-{0}/",
-            "ListPageStart": 222,
+            "PageIteration": {
+                "IterationName": "PiInteger",
+                "PageFormat": "http://fwzx.fy.gov.cn/content/channel/59a7d2b77f8b9aed58e15d1f/page-{0}/",
+                "MaxPage": 10,
+                "StartPage": 2
+            },
             "ResultItemXPath": "/html/body/div[3]/div[3]/div[1]/ul/li",
             "IsItemPageCheckRegex": "/content/detail/.*\\.html",
             "SaveResultsTo": "results/fwzx/",
+            "SaveTo": {
+                "Type": "HttpPipline",
+                "ProcessUrl": "http://"
+            },
             "Metas": [
                 {
                     "FieldName": "Url",
@@ -101,78 +142,28 @@
                     "CheckCache": true
                 },
                 {
-                    "FieldName": "PublishDate",
+                    "FieldName": "originalUrl",
+                    "XPath": "/a",
+                    "Attribute": "href"
+                },
+                {
+                    "FieldName": "originalPublishDate",
                     "XPath": "/span",
                     "CheckCache": true
                 }
             ],
             "Fields": [
                 {
-                    "FieldName": "Title",
+                    "FieldName": "originalTitle",
                     "XPath": "/html/body/div[3]/div[2]/h1"
                 },
                 {
-                    "FieldName": "Content",
+                    "FieldName": "originalContent",
                     "XPath": "//*[@id=\"zoom\"]"
                 },
                 {
-                    "FieldName": "Source",
+                    "FieldName": "originalSource",
                     "FieldValue": "阜阳市人民政府政务服务中心"
-                }
-            ]
-        },
-        {
-            "Enabled": false,
-            "JobName": "test2",
-            "StartUrls": [
-                "https://www.cyzone.cn/category/8/"
-            ],
-            "UserAgent": "Mozilla/5.0 (Windows NT 10.0; WOW64) AppleWebKit/537.36 (KHTML, like Gecko) Chrome/70.0.3538.77 Safari/537.36",
-            "IsListPageCheckRegex": "",
-            "ListPageFormat": "",
-            "ListPageStart": 2,
-            "ResultItemXPath": "/html/body/div[2]/div[2]/div[1]/div[2]/div",
-            "IsItemPageCheckRegex": "/article/.*\\.html",
-            "AddResultItemDirectly": true,
-            "SaveTo": {
-                "Type": "HttpPipline",
-                "ProcessUrl": "http://localhost:5000/api/news/batch"
-            },
-            "Metas": [
-                {
-                    "FieldName": "Url",
-                    "XPath": "div/a",
-                    "Attribute": "href",
-                    "CheckCache": true
-                },
-                {
-                    "FieldName": "PublishDate",
-                    "XPath": "div/div[2]/div[1]",
-                    "Attribute": "data-time",
-                    "CheckCache": true
-                },
-                {
-                    "FieldName": "Title",
-                    "XPath": "div/a"
-                },
-                {
-                    "FieldName": "Description",
-                    "XPath": "div/div[1]"
-                },
-                {
-                    "FieldName": "Categories",
-                    "FieldValue": "快讯",
-                    "FieldType": "Const"
-                }
-            ],
-            "Operations": [
-                {
-                    "FieldName": "Start",
-                    "OperationName": "OpHtmlDecode"
-                },
-                {
-                    "FieldName": "End",
-                    "OperationName": "OpHtmlDecode"
                 }
             ]
         }
