--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -8,3 +8,4 @@ services:
       dockerfile: Supperxin.Web.Webcrawler/Dockerfile
     volumes:
       - /data/webcrawler/results:/app/results
+      - /data/webcrawler/state:/app/state
