--- a/Supperxin.Web.Webcrawler/Supperxin.Web.Webcrawler.csproj
+++ b/Supperxin.Web.Webcrawler/Supperxin.Web.Webcrawler.csproj
@@ -4,12 +4,13 @@
     <TargetFramework>netcoreapp2.1</TargetFramework>
   </PropertyGroup>
   <ItemGroup>
-    <PackageReference Include="DotnetSpider2.Core" Version="2.4.5"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1"/>
-    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1"/>
-    <PackageReference Include="HtmlAgilityPack" Version="1.8.9"/>
+    <PackageReference Include="DotnetSpider2.Core" Version="2.4.5" />
+    <PackageReference Include="Microsoft.Extensions.Configuration" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Binder" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.FileExtensions" Version="2.1.1" />
+    <PackageReference Include="Microsoft.Extensions.Configuration.Json" Version="2.1.1" />
+    <PackageReference Include="HtmlAgilityPack" Version="1.8.9" />
+    <PackageReference Include="Microsoft.Extensions.DependencyInjection" Version="2.2.0" />
   </ItemGroup>
   <ItemGroup>
     <None Update="appsettings*.json">
