add iteration for readhub, add PiMetaValue

--- a/Supperxin.Web.Webcrawler/Configurations/appsettings.readhub.json
+++ b/Supperxin.Web.Webcrawler/Configurations/appsettings.readhub.json
@@ -44,6 +44,10 @@
                     "FieldName": "Category",
                     "FieldValue": "最热",
                     "FieldType": "Const"
+                },
+                {
+                    "FieldName": "Order",
+                    "XPath": "$.order"
                 }
             ],
             "Operations": [
@@ -54,7 +58,12 @@
                         "https://readhub.cn/topic/"
                     ]
                 }
-            ]
+            ],
+            "PageIteration": {
+                "IterationName": "PiMetaValue",
+                "PageFormat": "https://api.readhub.cn/topic?lastCursor={Order}&pageSize=20",
+                "MaxPage": 10
+            }
         }
     ]
 }
