update huxiu config

--- a/Supperxin.Web.Webcrawler/Configurations/appsettings.huxiu.json
+++ b/Supperxin.Web.Webcrawler/Configurations/appsettings.huxiu.json
@@ -29,7 +29,7 @@
                 },
                 {
                     "FieldName": "Title",
-                    "XPath": "div/a/h5"
+                    "XPath": "//p[@class=\"focus-item__right__title multi-line-overflow\"]"
                 },
                 {
                     "FieldName": "Category",
